--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.0",
     "antd": "^5.23.3",
     "canvas-confetti": "^1.9.2",
